<resources>
    <string name="app_name">Login dan Register</string>
    <string name="title_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="text_forgot">Forgot?</string>
    <string name="text_register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="text_account">Already have an account?</string>
    <string name="hint_email">E-mail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>